<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Settings, should always be in the overflow -->
<!--    <item
        android:id="@+id/action_email"
        android:enabled="false"
        android:title="Email"
        app:showAsAction="never" />-->
    <item android:id="@+id/action_disconnect"
        android:title="@string/disconnect"
        app:showAsAction="never"/>
    <item android:id="@+id/logOutButton"
        android:title="@string/cerrar_sesi_n"
        app:showAsAction="never"/>
    <item android:id="@+id/action_stats"
        android:title="@string/action_stats"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
    android:title="@string/action_settings"
    app:showAsAction="never"/>
    <item android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>
