<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:theme="@style/Theme.MaterialComponents.Light.Bridge">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
            app:titleTextColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linl1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/auto_on_off"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/on_off_light_levels"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linl3"
                android:orientation="horizontal">

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/slider1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:stepSize="1.0"
                    android:theme="@style/Theme.MaterialComponents.Bridge"
                    android:valueFrom="0.0"
                    android:valueTo="1023.0"
                    app:values="@array/initial_slider_values"
                    tools:layout_editor_absoluteX="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linl6">
                <TextView
                    android:id="@+id/lowerThrValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/turn_on_at"
                    android:textSize="15sp"
                    />
                <TextView
                    android:id="@+id/higherThrValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/turn_off_at"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linl4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button7"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:background="?android:attr/colorBackground"
                    android:paddingLeft="10dp"
                    android:text="@string/receive_levels_from_device"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/settingsText"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linl5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button6"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:background="?android:attr/colorBackground"
                    android:paddingLeft="10dp"
                    android:text="@string/save_levels_in_device"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/settingsText"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="65dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linl7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="progress"
                    android:textAlignment="center"
                    android:textColor="@color/buttonLabel"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar3"
                    tools:layout_editor_absoluteX="129dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
